# tues_project_2022

./: Makefile.am  client  configure.ac  create-files.sh  elsys-switch-set  elsys-switch.c  elsys-switch.yang  loop.py  loop123.py  networks-config-1.xml  networks-config-123-1.xml  networks-config-123-2.xml  networks-config-123-3.xml  networks-config-2.xml  networks.xml  set-net.txt  setup-client.sh  setup.sh  ssh.txt  yangcli.txt
